--- a/assignments/assignment-1.qmd
+++ b/assignments/assignment-1.qmd
@@ -329,7 +329,7 @@ print(my_plot)
 
 **Now it's your turn! Turn this static ggplot into an interactive plotly object, and add a customized tooltip that shows additional context next to the default values when you hover over the plot.**
 
-When you are done, please close the connection to the database (run this code in the console!):
+When you are done, please close the connection to the database:
 
 ```{r 1B close-connection}
 oefenwebDatabase::close_connections()
