--- a/documents/working-on-the-server.qmd
+++ b/documents/working-on-the-server.qmd
@@ -102,7 +102,8 @@ domain_group_ids <- c(1, 2, 5)
 application_id <- 1
 params <- list(domain_group_ids, application_id)
 
-# select all columns from the domains table for domains 1:4
+# select all columns from the domains table for the domains in
+# specified domain group and application
 my_data_domains <- get_query(
   "SELECT *
   FROM `domains`
