--- a/slides/slides copy.qmd
+++ b/slides/slides copy.qmd
@@ -20,489 +20,220 @@ title-slide-attributes:
   data-background-size: auto
 ---
 
-------------------------------------------------------------------------
+# Better plots 🥇 {background-color="#8000FF"}
 
-```{r, include=FALSE}
-library(tidyverse)
-```
+## Tuesday, Oct 7
 
-:::::: columns
-:::: {.column width="50%"}
-::: columns
-Slides made using [quarto](https://quarto.org){target="_blank"}
+-  Feedback on assignment 1
+-  Recap: what makes a good DV?
+-  More data visualization features 
+-  Work on assignment 2
 
-Cover photo made in R by [Danielle Navarro](https://art.djnavarro.net){target="_blank"}
-:::
-::::
+## Tips from Assignment 1
 
-::: {.column width="50%"}
-![](images/coverphoto.jpg){fig-align="center" width="80%"}
-:::
-::::::
 
-## 📌
-
-### [**data-visualization-2025**](https://ann1ejohansson.github.io/data-visualization-2025){target="_blank"}
-
-## Tuesday, Sept 30
-
--   Why visualize data?
--   What makes a plot good (and bad)?
--   Guiding principles
--   Data Visualization Project
-
-# Why visualize data? 👀 {background-color="#8000FF"}
-
-## Tuesday, Sept 30
-
--   **Why visualize data?**
--   What makes a plot good (and bad)?
--   Guiding principles
--   Data Visualization Project
-
-## 💬
-
-### Why visualize data?
-
-## Why visualize data? {.smaller}
-
-:::::: columns
-::: {.column width="40%"}
-![](images/why-visualize-01.png)
-:::
-
-:::: {.column width="60%"}
-::: fragment
-![](images/why-visualize-02.png)
-:::
-::::
-::::::
-
-## Why visualize data? {.smaller}
-
-::: {layout-ncol="2"}
-<a href="images/bandjes1.png" target="_blank"> <img src="images/bandjes1.png" width="500" dpi="1000" style="max-width: 100%;"/> </a>
-
-<a href="images/bandjes2.png" target="_blank"> <img src="images/bandjes2.png" dpi="1000" width="500" style="max-width: 100%;"/> </a>
-:::
-
-## Anscombe's quartet {.smaller}
+## One dataset, many visualizations
 
 ::::: columns
 ::: {.column width="50%"}
-![Source: Same stats, different graphs](images/anscombe1.png) ![Source: Wikipedia](images/anscombe2.png)
+```{r}
+#| echo: true
+#| code-fold: true
+library("gt")
+data("pizzaplace")
+pizza_top <- pizzaplace %>%
+  dplyr::mutate(size = factor(size, levels = c("S", "M", "L"))) %>%
+  dplyr::count(name, type, size, price, sort = TRUE) %>%
+  dplyr::top_n(n = 5)
+pizza_top %>%
+  gt::gt() %>%
+  gt::tab_header(title = "Pizza Top 5", subtitle = "2015") %>%
+  gt::fmt_currency(columns = price, currency = "USD") %>%
+  gt::tab_source_note(source_note = gt::md("Source: [pizzaplace dataset](https://gt.rstudio.com/articles/gt-datasets.html#pizzaplace)")) %>%
+  gt::opt_stylize(style = 6)
+```
+:::
+
+::: {.column width="50%"}
+```{r warning=FALSE}
+#| echo: true
+#| code-fold: true
+library("ggplot2")
+pizza_top %>%
+  ggplot2::ggplot(aes(x = reorder(name, n, decreasing = TRUE), y = n)) +
+  ggplot2::geom_point(aes(color = type, size = size)) +
+  ggplot2::geom_text(aes(label = price), nudge_y = -30) +
+  ggplot2::labs(title = "Pizza Top 5", subtitle = "2015", x = "name") 
+```
+:::
+:::::
+
+## One dataset, many visualizations
+
+::::: columns
+::: {.column width="50%"}
+```{r}
+#| echo: true
+#| code-fold: true
+library("gt")
+pizza_season <- pizzaplace %>%
+  dplyr::mutate(month = lubridate::month(date, label = TRUE)) %>%
+  dplyr::group_by(month) %>%
+  dplyr::count(type)
+pizza_season %>%
+  tidyr::pivot_wider(names_from = month, values_from = n) %>%
+  gt::gt() %>%
+  gt::tab_header(title = "Pizza Season", subtitle = "2015") %>%
+  gt::tab_source_note(source_note = gt::md("Source: [pizzaplace dataset](https://gt.rstudio.com/articles/gt-datasets.html#pizzaplace)")) %>%
+  gt::opt_stylize(style = 6)
+```
 :::
 
 ::: {.column width="50%"}
 ```{r}
 #| echo: true
 #| code-fold: true
-#| fig.height: 10
-library("datasauRus")
-datasaurus_dozen %>% 
-  ggplot2::ggplot(aes(x = x, y = y, color = dataset)) +
-  ggplot2::geom_point() +
-  ggplot2::theme_void() +
-  ggplot2::geom_smooth(method = "lm", color = "gray", fill = "gray", alpha = .5) +
-  ggplot2::theme(legend.position = "none", text = element_text(size = 30)) +
-  ggplot2::facet_wrap(~dataset, ncol = 4)
+#| fig.height: 5
+#| fig.show: "hold"
+library("ggplot2")
+library("lubridate")
+fig_season_1 <- pizza_season %>%
+  ggplot2::ggplot(aes(x = month, y = n, group = type)) +
+  ggplot2::geom_line(aes(linetype = type)) +
+  ggplot2::labs(title = "Pizza Season", subtitle = "2015")
+fig_season_1
+
+fig_season_2 <- pizza_season %>%
+  ggplot2::ggplot(aes(x = month, y = n, group = type)) +
+  ggplot2::geom_bar(aes(fill = type), stat = "identity", position = "dodge") +
+  ggplot2::labs(title = "Pizza Season", subtitle = "2015")
+fig_season_2
 ```
 :::
 :::::
 
-::: footer
-Packages: [datasauRus](https://jumpingrivers.github.io/datasauRus/), [anscombiser](https://paulnorthrop.github.io/anscombiser/).
 
-More information: [Same Stats, Different Graphs](https://www.autodesk.com/research/publications/same-stats-different-graphs), [socviz.co](https://socviz.co/lookatdata.html#why-look-at-data).
-:::
+## [from data to viz](https://www.data-to-viz.com/)
 
-## 💬
+![](images/data-to-viz.png){fig.height="600"}
 
-### What is more important? An eye or an algorithm?
+## [from data to viz](https://www.data-to-viz.com/)
 
-What are the consequences of overrelying on statistical techniques? <br>What are the consequences of overrelying on visualizations?
+![](images/data-to-viz-caveats.png){fig.height="600"}
 
-# Bad plots 💩 {background-color="#8000FF"}
-
-## Tuesday, Sept 30
-
--   Why visualize data?
--   **What makes a plot good (and bad)?**
--   Guiding principles
--   Data Visualization Project
-
-## What makes a bad plot bad?
+## Recap
 
 ::::: columns
 ::: {.column width="40%"}
--   Aesthetic (ugly)
+✓ Keep it simple.
 
--   Perceptual (bad)
+✓ Don't mislead.
 
--   Substantive (wrong)
+✓ Tell one story.
+
+✓ **First impressions matter!**
 :::
 
 ::: {.column width="60%"}
-![[Claus Wilke - Ugly, bad, and wrong figures](https://clauswilke.com/dataviz/introduction.html)](images/ugly-bad-wrong.png)
+![](images/misleading.jpeg){fig-align="center"}
 :::
 :::::
 
-## 💬 Speed dates
-
-::::: columns
-::: {.column width="40%"}
--   What do you think about this plot?
-
--   What elements can be improved?
-
--   Are the problems aesthetic, perceptual, or substantive?
-:::
-
-::: {.column width="60%"}
-![](images/ireland.png)
-:::
-:::::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![reddit.com/r/dataisugly](images/lidl.png){fig-align="left" height="500"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Misleading (or missing) information?
--   Many data visualizations might have a hidden agenda, due to e.g. marketing strategies.
-:::
-::::
-::::::
-
-::: footer
-Check out the classic from Darrel Huff [How to Lie with Statistics](https://www.penguin.co.uk/books/13565/how-to-lie-with-statistics-by-darrell-huff-with-pictures-by-mel-calman/9780140136296) [Lessions from How to Lie with Statistics.](https://towardsdatascience.com/lessons-from-how-to-lie-with-statistics-57060c0d2f19)
-:::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![[Source: reddit.com/r/dataisbeautiful](https://www.reddit.com/r/dataisugly/)](images/data_ink.png){fig-align="left" width="544"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Data to ink ratio?
-:::
-::::
-::::::
-
-::: footer
-[How to maximize the data-to-ink ratio](https://www.codeconquest.com/blog/data-ink-ratio-explained-with-example/)
-:::
-
-------------------------------------------------------------------------
-
-### Data to ink ratio
-
-::::: columns
-::: {.column width="50%"}
-![](images/data_ink.png)
-:::
-
-::: {.column width="50%"}
-![](images/data_ink2.jpeg){height="500"}
-:::
-:::::
-
-::: footer
-[How to maximize the data-to-ink ratio](https://www.codeconquest.com/blog/data-ink-ratio-explained-with-example/)
-:::
-
-------------------------------------------------------------------------
-
-![](images/treemap.png)
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/colors.jpg){width="490"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Do the colors make sense?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-![Do the colors make sense?](images/colors2.png)
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/all_elements_needed.jpeg){width="490"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Are all elements needed?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/axes_correct.jpeg){height="500"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Are the axes correct?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-![Is a zero-point needed?](images/ireland.png)
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/stacked1.png)
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Is it simple?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-### ⚠️ Stacked bar charts ⚠️
-
-::::: columns
-::: {.column width="60%"}
-![](images/stacked2.png)
-:::
-
-::: {.column width="40%"}
-![](images/brazil.jpeg)
-:::
-:::::
-
-------------------------------------------------------------------------
-
-### ⚠️ Pie charts ⚠️
-
-![](images/pie1.png)
-
-------------------------------------------------------------------------
-
-### Visualizing proportions
-
--   Pie chart, stacked bar, or side-by-side bars?
-
-![](images/proportions.png)
-
-<https://clauswilke.com/dataviz/visualizing-proportions.html#>
-
-------------------------------------------------------------------------
-
-![Elementary Perceptual Tasks](images/ept.png)
-
-::: footer
-Original Source: [Cleveland & McGill (1984). 531-554](https://www.tandfonline.com/doi/abs/10.1080/01621459.1984.10478080); [Further summary and examples](https://bookdown.org/dereksonderegger/141/6-graphing-principles.html)
-:::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/storytelling_before.png)
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Does it support one conclusion?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-### Storytelling with data - show just one conclusion!
-
-![](images/storytelling_after.png)
-
-## Exploratory versus explanatory {.smaller .scrollable}
-
-::: notes
-Exploratory in the sense of data exploration. Exploratory in the sense of visualization exploration (as in previous example, where the same data can be plotted in several ways). In both cases, you can create ugly plots.
-
-We focus on explanatory data viz (also bridge to next). Beautiful plots!
-:::
-
-::::: columns
-::: {.column width="50%"}
-![Source: [Natalia Kiseleva](https://eolay.tilda.ws/datavizcomics/en)](images/exploratory-explanatory-01.png){fig-align="left" width="333"}
-:::
-
-::: {.column width="50%"}
-![Source: [Scott McCloud](https://archive.org/details/understanding-comics/)](images/exploratory-explanatory-02.gif){fig-align="left"}
-
--   **Exploratory**: examine the structure of your data.
-
--   **Explanatory:** tell a story with your data.
-:::
-:::::
-
-::: footer
-More resources: [clauswilke.com](https://clauswilke.com/dataviz/telling-a-story.html) (telling a story and making a point), [susielu.com](https://www.susielu.com/data-viz/storytelling-in-dashboards) (different interpretation of exploratory/explanatory).
-:::
-
-## Exploratory versus explanatory {.smaller .scrollable}
-
-::::: columns
-::: {.column width="50%"}
-![](images/explore-explain-01.gif){fig-height="200"}
-:::
-
-::: {.column width="50%"}
-![](images/explore-explain-02.gif){fig-height="300"}
-:::
-:::::
-
-Source: [storytellingwithdata.com](https://www.storytellingwithdata.com/blog/2014/04/exploratory-vs-explanatory-analysis)
-
-::: footer
-More resources: [clauswilke.com](https://clauswilke.com/dataviz/telling-a-story.html) (telling a story and making a point), [susielu.com](https://www.susielu.com/data-viz/storytelling-in-dashboards) (different interpretation of exploratory/explanatory).
-:::
-
-## [Some good examples]{style="font-size: 0.7em;"} {.smaller .scrollable}
-
-[![](images/good1.png){width="100%"}](images/good1.png) [Distributions are informative](https://clauswilke.com/dataviz/histograms-density-plots.html)
-
-::::: columns
-::: {.column width="50%"}
-[![](images/good2.png){width="100%"}](images/good2.png)
-:::
-
-::: {.column width="50%"}
-[![](images/good3.png){width="100%"}](images/good3.png)
-:::
-:::::
-
-[NYT Graphic - Obamacare spending](https://www.nytimes.com/interactive/2023/09/05/upshot/medicare-budget-threat-receded.html?pgtype=Article&action=click&module=RelatedLinks)
-
-[How to reproduce a NYT graphic](https://sean.netlify.app/post/how-to-reproduce-a-nyt-graphic/)
-
-# Guiding principles 🪄 {background-color="#8000FF"}
-
-## Tuesday, Sept 30
-
--   Why visualize data?
--   What makes a plot good (and bad)?
--   **Guiding principles**
--   Data Visualization Project
-
-## Tips for the best viz
-
--   Is it **explaining** data?
-
--   Is the information **complete and correct**?
-
--   Are **axes** correct? (+ Should they have a zero-point?)
-
--   Do the **colors** work? ( + Do they map to a relevant attribute?)
-
--   Are all **elements** needed?
-
--   What is the **data to ink ratio?**
-
--   Is it **understandable & simple?**
-
--   Does it portray **one conclusion**?
-
-## Break
+## More data visualization features
+
+-  Chart junk
+-  Themes
+-  Colors
+-  Color blindness
+-  Captions
+-  Typography
+-  File format/size
+-  Font embedding
+
+## Chart junk
+```{r}
+library(dplyr)
+library(ggplot2)
+
+# aggregate to totals
+pizza_totals <- pizza_season %>%
+  group_by(type) %>%
+  summarise(total = sum(n), .groups = "drop") %>%
+  mutate(n_icons = round(total / 1000))  # 1 pizza = 100 sales
+
+# expand data: one row per pizza icon
+pizza_iso <- pizza_totals %>%
+  rowwise() %>%
+  mutate(icon_id = list(1:n_icons)) %>%
+  tidyr::unnest(icon_id) %>%
+  mutate(highlight = ifelse(type == "classic", TRUE, FALSE))
+
+pizza_totals <- pizza_totals %>%
+  mutate(highlight = ifelse(type == "classic", TRUE, FALSE))
+
+# plot with 🍕
+fig_pizza_iso <- ggplot(pizza_iso, aes(x = icon_id, y = type)) +
+  ggimage::geom_image(aes(image = "images/pizza.png"), size = 0.2) +
+  geom_rect(
+    data = pizza_totals,
+    aes(xmin = total/1000, xmax = total/1000 + 2, 
+        ymin = as.numeric(factor(type)) - 0.5, 
+        ymax = as.numeric(factor(type)) + 0.5),
+    inherit.aes = FALSE,
+    fill = "white"
+  ) +
+  labs(
+    title = "Total Pizza Sales in 2015",
+    x = "Sales (Scale 1:1000)",
+    y = NULL
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    panel.grid = element_blank(),
+    axis.ticks = element_blank()
+  )
+
+fig_pizza_iso
+```
+
+##
 
 ```{r}
 #| echo: true
 #| code-fold: true
-#| results: false
-library("RXKCD")
-RXKCD::getXKCD(which = "833")
+library("showtext")
+sysfonts::font_add_google("Lobster")
+sysfonts::font_add_google("Lexend")
+showtext::showtext_auto()
+# fig_pizza_iso +
+#   ggplot2::theme(plot.title = element_text(family = "Lobster", size = 20),
+#                  axis.title.x = element_text(family = "Lobster", size = 16),
+#                  axis.text.y = element_text(family = "Lobster", size = 16))
+
+# pizza_iso <- pizza_totals %>%
+#   rowwise() %>%
+#   mutate(icon_id = list(1:n_icons)) %>%
+#   tidyr::unnest(icon_id) %>%
+#   mutate(highlight = ifelse(type == "classic", TRUE, FALSE))
+
+fig_pizza_iso +
+  geom_rect(
+    data = pizza_totals,
+    aes(xmin = 0, xmax = total/1000, 
+        ymin = as.numeric(factor(type)) - 0.5, 
+        ymax = as.numeric(factor(type)) + 0.5,
+        alpha = highlight),
+    inherit.aes = FALSE,
+    fill = "white"
+  ) +
+  scale_alpha_manual(values = c("TRUE" = 0, "FALSE" = 0.3), guide = "none") +
+  labs(title = "The classic is a classic for a reason.",
+       subtitle = "Total Pizza Sales in 2015",
+       caption = "Source: pizzaplace dataset") +
+  ggplot2::theme(text = element_text(family = "Lexend", color = "gray30"),
+                 plot.title = element_text(family = "Lobster", size = 20, color = "tomato3"),
+                 plot.subtitle = element_text(family = "Lexend", size = 16), 
+                 axis.title.x = element_text(family = "Lobster", size = 16),
+                 axis.text.y = element_text(family = "Lobster", size = 16, color = "tomato3"))
 ```
 
-# Data Visualization Project 📊 {background-color="#8000FF"}
-
-## Tuesday, Sept 30
-
--   Why visualize data?
--   What makes a plot good (and bad)?
--   Guiding principles
--   **Data Visualization Project**
-
-## Aims
-
-Your goal is to go from exploring the Prowise data to telling a story with it.
-
--   [Assignment 1](../assignments/assignment-1.html){target="_blank"}: Choose a research question. Explore the data and create a set of visualizations to help you understand the data.
-
--   [Assignment 2](../assignments/assignment-2.html){target="_blank"}: Create a final data visualization that tells a story with the data. Compiled into a html document, and presented in a GitHub repository.
-
-## Requirements Assignment 2
-
--   Use R Markdown (or Quarto) to create your visualizations.
--   The markdown document should be in the style of a report: explain your research question, and how you came to your conclusion. Not more than 1000 words.\
--   Include an exploratory graph, and explain how it helped you understand the data.
--   Only your final, explanatory graph, will be graded. Clearly mark which graph this is.
-
-## Workflow
-
--   Comment your code clearly. We want to understand your thought process.
--   Collaborate within your group using Git & GitHub. You will set up your own project repository connected to the Data Visualization Server.
--   Make sure all documents render correctly, and that code is styled and runs.
--   ️⚠ **Do not push any data to GitHub.**
-
-## Workflow
-
--   [Working on the server](../documents/working-on-the-server.html){target="_blank"}
-
--   [Git setup & workflow](../documents/working-with-git.html){target="_blank"}
-
-## First draft & peer review
-
--   First draft due Friday 10/10 12.30 -- No requirements.
-
--   Peer review due Friday 10/10 23.59 -- Review one other group's work. You will have time for this during Friday's class.
-
-## Grading
-
--   Assigment 1: 50%
--   Individual part:
--   Group part:
--   Assigment 2: 50%
