--- a/documents/ggplotly-handout.qmd
+++ b/documents/ggplotly-handout.qmd
@@ -5,12 +5,17 @@ format: html
 
 This handout provides an example of creating an interactive visualization with `ggplotly()` using data from the Oefenweb learning platform. We first set up the environment.
 
+```{r setup-hidden, message=FALSE, warning=FALSE, include = FALSE, eval = TRUE}
+# Set up environment
+knitr::opts_chunk$set(eval = FALSE, echo = TRUE, message = FALSE, warning = FALSE)
+rm(list = ls())
+```
+
 ```{r setup, message=FALSE, warning=FALSE}
 # Set up environment
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 rm(list = ls())
 ```
-
 
 ```{r setup-2, message=FALSE, warning=FALSE}
 # Load libraries
@@ -36,7 +41,7 @@ data <- get_query(
 
 We are now going to make a regular `ggplot` object that depicts how the player's ability rating in the addition game develops over time. Additionally, we are plotting for each given response whether that was a correct or an incorrect response to the item's question.
 
-```{r ggplot, fig.height = 6, fig.width = 8, fig.align = "center"}
+```{r ggplot, eval=FALSE, fig.width=8, fig.height=6}
 # set custom aesthetics
 # plot theme
 plot_theme <- theme_minimal(base_size = 13) +
@@ -84,7 +89,14 @@ data %>%
     y = "User domain rating"
   ) +
   plot_theme
+
 ```
+
+```{r, eval=FALSE, include=FALSE}
+ggsave(file = "example_static.png", height = 6, width = 8, dpi = 500)
+```
+
+![](example_static.png){width="3332"}
 
 To convert the static ggplot above, you simply call `ggplotly(your_plot)`, where `your_plot` is the ggplot object you created. This turns it into an interactive plot with tooltips, zoom, and pan.
 
@@ -131,9 +143,21 @@ my_plotly <- data %>%
 ggplotly(my_plotly, tooltip = "text")
 ```
 
+```{r, include=FALSE, eval=FALSE}
+# Export the plotly into an html object
+int_plot <- ggplotly(my_plotly, tooltip = "text")
+htmlwidgets::saveWidget(int_plot, "example_plotly.html", selfcontained = TRUE)
+# then add this code in quarto text to render the html object: 
+# <iframe src="example_plotly.html" width="100%" height="500px" frameborder="0"></iframe>
+```
+
+<iframe src="example_plotly.html" width="100%" height="100%" frameborder="0">
+
+</iframe>
+
 Note: Once you use `tooltip = "text"`, Plotly only displays the contents specified in the text aesthetic -- so be sure to include everything you want to see in the tooltip.
 
-And that's it! You have now converted the static plot into an interactive plotly object. 
+And that's it! You have now converted the static plot into an interactive plotly object.
 
 ```{r close connection, message=FALSE, warning=FALSE}
 oefenwebDatabase::close_connections()
