--- a/documents/ggplotly-handout.qmd
+++ b/documents/ggplotly-handout.qmd
@@ -151,7 +151,7 @@ htmlwidgets::saveWidget(int_plot, "example_plotly.html", selfcontained = TRUE)
 # <iframe src="example_plotly.html" width="100%" height="500px" frameborder="0"></iframe>
 ```
 
-<iframe src="example_plotly.html" width="100%" height="100%" frameborder="0">
+<iframe src="example_plotly.html" width="100%" height="700px" frameborder="0">
 
 </iframe>
 
